tests/ui/const-generics/different_generic_args.full.stderr
error[E0308]: mismatched types
  --> $DIR/different_generic_args.rs:11:9
   |
LL |     u = ConstUsize::<4> {};
   |         ^^^^^^^^^^^^^^^^^^ expected `3`, found `4`
   |
   = note: expected constant `3`
              found constant `4`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
